--- a/html/index/css/base.css
+++ b/html/index/css/base.css
@@ -169,6 +169,25 @@ section.query {
   position: relative;
   background-color: #f8f8f8;
 }
+section.query ul.city-auto {
+  width: 250px;
+  background-color: #fff;
+  color: #000;
+  z-index: 200;
+  list-style: none;
+  margin: 0; padding: 0;
+  position: absolute;
+  box-shadow: 0px 3px 3px #ccc;
+  display: none;
+}
+section.query ul.city-auto li {
+  height: 25px;
+  text-indent: 10px;
+  line-height: 25px;
+}
+section.query ul.city-auto li:hover {
+  background-color: #eee;
+}
 
 
 section.query form.index-query {
@@ -185,7 +204,7 @@ section.query form.index-query {
 section.query form.index-query input[type='text'] {
   display: block;
   width: 250px;
-  height: 2.5em;
+  height: 35px;
   padding: 5px 10px;
   margin-bottom: 25px;
   background-color: #eee;
@@ -296,16 +315,21 @@ section.advantage div.info-box p {
 
 /* 我们所做的 */
 section.about p {
-  line-height: 2.5em;
+  line-height: 3em;
   font-size: 1.1em;
-  /* font-weight: 200; */
+  color: #676767;
 }
 section.about p span {
-  color: #57ACF6;
-  padding: 0 5px;
   word-break: keep-all;
 }
-
+section.about p span::before {
+  content: "[";
+  margin: 0 .3em 0 1em;
+}
+section.about p span::after {
+  content: "]";
+  margin: 0 1em 0 .3em;
+}
 
 
 section.ad-block {
@@ -323,16 +347,24 @@ section.ad-block h1 {
 /* 联系我们 */
 section.contact p.contact-com {
   line-height: 2em!important;
+  color: #787878;
+}
+section.contact p.contact-com::before {
+  content: '[';
+}
+section.contact p.contact-com::after {
+  content: ']';
 }
 section.contact div.contact-info {
   padding-right: 50px;
 }
 section.contact div.contact-info p {
   font-size: 1.1em;
+  color: #787878;
   line-height: 2em;
 }
 div.contact-info p > a {
-  color: #666;
+  color: inherit;
   font-style: italic;
 }
 div.contact-info p > a:hover {
@@ -343,7 +375,18 @@ section.contact div.col-md-6 {
 }
 section.contact div.send-msg label {
   font-size: 1.2em;
+  color: #999;
   font-weight: normal;
+}
+section.contact div.send-msg input::placeholder,
+section.contact div.send-msg textarea::placeholder {
+  color: #e5e5e5;
+}
+section.contact div.send-msg input,
+section.contact div.send-msg textarea {
+  color: #222;
+  box-shadow: 0 0 #000!important;
+  border-color: #ccc!important;
 }
 section.contact div.send-msg input,
 section.contact div.send-msg textarea,
